--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
 ENV=DEV
 
+WEB_APP_URL=https://google.com
+
 DB_NAME=db_name
-DB_USER=db_user
 DB_PASSWORD=db_password
+DB_HOST=
+DB_PORT=
+DB_URL=mysql://root:db_password@mysql:3306
 
 TWITCH_CLIENT_ID=client_id
 TWITCH_CLIENT_SECRET=client_secret
