--- a/package.json
+++ b/package.json
@@ -21,23 +21,38 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/common": "^9.0.11",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^7.6.18",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/sequelize": "^9.0.0",
+    "@prisma/client": "^4.2.1",
+    "@quixo3/prisma-session-store": "^3.1.8",
+    "@types/express-session": "^1.17.5",
     "axios": "^0.27.2",
     "express-mysql-session": "^2.1.8",
+    "express-session": "^1.17.3",
+    "joi": "^17.6.0",
+    "mysql2": "^2.3.3",
+    "nestjs-joi": "^1.8.0",
     "nestjs-session": "^2.0.0",
+    "prisma-class-generator": "^0.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sequelize": "^6.25.2",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
+    "@mikro-orm/cli": "^5.3.1",
+    "@mikro-orm/migrations": "^5.3.1",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
+    "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -46,6 +61,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.0.3",
     "prettier": "^2.3.2",
+    "prisma": "^4.2.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
